# Textbook-QA-assistant

./: .gitignore  README.md  chat_model.py  main.py  setup.py  tool_funcs.py  vec_db.py  ~$笔记.docx  ~WRL2472.tmp  笔记.docx
NNS/: BruteForceSearch.cpp  BruteForceSearch_raw.cpp  CMakeLists.txt  HNSWSearch.cpp  HNSWSearch_raw.cpp  HashSearch.cpp  binding.cpp  test_data_generator.py
utils/: file_processor.py  text_processor.py
